added js card var

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+<!doctype html>
 
-     </body>
+<html>
+<head>
+<title>Memory Game</title>
+ <script src="main.js"></script>
+<link rel="stylesheet" href="style.css"> 
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"> 
+</head>
+
+<body>
+<nav class="clearfix">
+<a href="#">Instructions</a>
+<a href="#">Game</a>
+</nav>
+<hr>
+<h1>Memory Game</h1>
+<h2>Instructions</h2>
+<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+<h4> Test your memory with this fun filled game, play with family and friends and see whose brain is the sharpest!!</h4>
+	<div class="board"></div>
+	<div  class="clearfix" id="wrapper">
+	
+    <div class="card card1"></div>
+	
+	<aside>
+    <div class="card card2"></div>
+	</aside>
+	
+	
+	
+    <div class="card card3"></div>
+	
+	<aside>
+    <div class="card card4"></div>
+	</aside>
+	</div>
+   
+
+
+ 
+ <footer>Created with <i class="fa fa-heart"></i> by <span class="name"> David Useche</span></footer>
+
+</body>
 
 
 </html>
